--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		</div>
 		<!-- END CALL TO ACTION -->
 
-		<!-- WORKS -->
+		<!-- WORKS --
 		<div id="works" class="section works">
 			<div class="section-heading">
 				<h2>WORKS</h2>
@@ -444,21 +444,23 @@
 		<!-- CONTACT -->
 		<div id="contact" class="section contact">
 			<div class="section-heading">
-				<h2>INTERESSE?</h2>
+				<!--<h2>INTERESSE?</h2>-->
 				<!--<p>Now it's time to build a business and relationship</p>-->
 				<hr />
 			</div>
 			<div class="section-content">
-				<div class="google-map">
-					<div id="map-canvas"></div>
+				<div style="overflow: hidden; height: 350px; margin-bottom: 20px" >
+					<!--<div id="map-canvas"></div>-->
+                    <img src="assets/img/kontakt.jpg"></div>
 				</div>
 				<div class="contact-info">
 					<div class="container">
 						<div class="row">
+                            <div class="col-md-2"></div>
 							<div class="col-md-4">
 								<i class="fa fa-map-marker"></i>
 								<h3>Adresse</h3>
-								<p>Eythstr. 3<br />51103 Köln</p>
+								<p>Pia Kadasch <br/> Eythstr. 3<br />51103 Köln</p>
 							</div>
 							<div class="col-md-4">
 								<i class="fa fa-envelope"></i>
